@@ -3,6 +3,15 @@
 Notable changes to the Dungeon Roguelike Game will be documented here.
 The formatting is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/)
 
+## [unreleased]
+
+- Switch --nummon for determining the number of monsters in the dungeon,
+  defaulted to 10
+
+### Changed
+
+- Better error checking for switches and load/save functions
+
 ## [3.1.0] - 2025-2-26
 
 ### Added
